--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -207,23 +207,77 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" translatesAutoresizingMaskIntoConstraints="NO" id="wqw-5m-YWB">
-                                <rect key="frame" x="20" y="20" width="374" height="209"/>
+                                <rect key="frame" x="42" y="20" width="330" height="209"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="209" id="U4K-xr-W6D"/>
                                 </constraints>
                             </mapView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="css-Mm-BKf">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="css-Mm-BKf">
                                 <rect key="frame" x="20" y="237" width="374" height="459"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="t71-R8-46V">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LabelCell" rowHeight="21" id="t71-R8-46V" customClass="LabelCell" customModule="Clipper" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="21"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t71-R8-46V" id="NT0-Ji-hEN">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiO-Vx-RDq">
+                                                    <rect key="frame" x="20" y="1" width="334" height="16"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="334" id="ewY-wE-iHo"/>
+                                                        <constraint firstAttribute="height" constant="16" id="n2L-XP-Tx5"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yiO-Vx-RDq" firstAttribute="top" secondItem="NT0-Ji-hEN" secondAttribute="top" constant="1" id="75r-Gm-WI3"/>
+                                                <constraint firstAttribute="trailing" secondItem="yiO-Vx-RDq" secondAttribute="trailing" constant="20" id="eZH-yj-UMX"/>
+                                                <constraint firstAttribute="bottom" secondItem="yiO-Vx-RDq" secondAttribute="bottom" constant="4" id="jWu-2J-oQ8"/>
+                                                <constraint firstItem="yiO-Vx-RDq" firstAttribute="leading" secondItem="NT0-Ji-hEN" secondAttribute="leading" constant="20" id="ttl-DT-xj7"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="yiO-Vx-RDq" id="2gu-rC-krC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextCell" rowHeight="79" id="1ij-dq-A1W" customClass="TextCell" customModule="Clipper" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="49" width="374" height="79"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1ij-dq-A1W" id="Ygt-AQ-O07">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="79"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="adY-tc-07f">
+                                                    <rect key="frame" x="20" y="0.0" width="334" height="79"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="63" id="AfS-1t-DJf"/>
+                                                        <constraint firstAttribute="width" constant="334" id="QkR-Ui-nz3"/>
+                                                    </constraints>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="adY-tc-07f" firstAttribute="top" secondItem="Ygt-AQ-O07" secondAttribute="top" id="0iS-KC-wzx"/>
+                                                <constraint firstAttribute="trailing" secondItem="adY-tc-07f" secondAttribute="trailing" constant="20" id="GuC-Am-LF5"/>
+                                                <constraint firstAttribute="bottom" secondItem="adY-tc-07f" secondAttribute="bottom" id="HLQ-DT-gfd"/>
+                                                <constraint firstItem="adY-tc-07f" firstAttribute="leading" secondItem="Ygt-AQ-O07" secondAttribute="leadingMargin" id="aR5-L9-GbK"/>
+                                                <constraint firstItem="adY-tc-07f" firstAttribute="leading" secondItem="Ygt-AQ-O07" secondAttribute="leading" constant="20" id="coD-MD-g1U"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="titleTextView" destination="adY-tc-07f" id="VPi-LN-kqh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -234,9 +288,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="wqw-5m-YWB" firstAttribute="leading" secondItem="Ggu-2j-Uh0" secondAttribute="leading" constant="20" id="J7U-NG-pBX"/>
-                            <constraint firstItem="Ggu-2j-Uh0" firstAttribute="trailing" secondItem="wqw-5m-YWB" secondAttribute="trailing" constant="20" id="SmS-Ll-IgK"/>
+                            <constraint firstItem="Ggu-2j-Uh0" firstAttribute="trailing" secondItem="css-Mm-BKf" secondAttribute="trailing" constant="20" id="4Jn-Cv-Awq"/>
+                            <constraint firstItem="css-Mm-BKf" firstAttribute="top" secondItem="wqw-5m-YWB" secondAttribute="bottom" constant="8" id="IwF-lc-nkn"/>
+                            <constraint firstItem="wqw-5m-YWB" firstAttribute="leading" secondItem="Ggu-2j-Uh0" secondAttribute="leading" constant="42" id="J7U-NG-pBX"/>
+                            <constraint firstItem="Ggu-2j-Uh0" firstAttribute="trailing" secondItem="wqw-5m-YWB" secondAttribute="trailing" constant="42" id="SmS-Ll-IgK"/>
                             <constraint firstItem="wqw-5m-YWB" firstAttribute="top" secondItem="Ggu-2j-Uh0" secondAttribute="top" constant="20" id="TOU-R2-7Uy"/>
+                            <constraint firstItem="Ggu-2j-Uh0" firstAttribute="bottom" secondItem="css-Mm-BKf" secondAttribute="bottom" constant="20" id="aIR-6N-v2c"/>
+                            <constraint firstItem="css-Mm-BKf" firstAttribute="leading" secondItem="Ggu-2j-Uh0" secondAttribute="leading" constant="20" id="r7a-Q7-yYC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ggu-2j-Uh0"/>
                     </view>
