--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -508,7 +508,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0KU-mH-4Aj" userLabel="Frame View">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="258"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="314"/>
                                 <subviews>
                                     <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghg-8r-q3x">
                                         <rect key="frame" x="370" y="28" width="32" height="32"/>
@@ -569,17 +569,6 @@
                                             <constraint firstAttribute="height" constant="1" id="alj-OF-gwd"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yV-cQ-dd0">
-                                        <rect key="frame" x="357" y="210" width="45" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="uBa-53-9WL"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="Salvar"/>
-                                        <connections>
-                                            <action selector="saveAction:" destination="Eqp-fv-bfG" eventType="touchUpInside" id="RGt-22-TgB"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nova Localidade" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5UZ-ni-JkA">
                                         <rect key="frame" x="10" y="28" width="394" height="21"/>
                                         <constraints>
@@ -590,38 +579,51 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yV-cQ-dd0">
+                                        <rect key="frame" x="139" y="225" width="137" height="58"/>
+                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="58" id="ADk-Rp-z1Y"/>
+                                            <constraint firstAttribute="width" constant="137" id="r3K-cT-dez"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <state key="normal" title="Salvar"/>
+                                        <connections>
+                                            <action selector="saveAction:" destination="Eqp-fv-bfG" eventType="touchUpInside" id="RGt-22-TgB"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="TYB-MU-TsK" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="0D8-Tu-fdO"/>
                                     <constraint firstItem="5UZ-ni-JkA" firstAttribute="top" secondItem="0KU-mH-4Aj" secondAttribute="top" constant="28" id="1Ev-mr-ofY"/>
-                                    <constraint firstAttribute="trailing" secondItem="3yV-cQ-dd0" secondAttribute="trailing" constant="12" id="5Nz-9v-avB"/>
-                                    <constraint firstAttribute="bottom" secondItem="ghg-8r-q3x" secondAttribute="bottom" constant="198" id="5z0-A5-guA"/>
+                                    <constraint firstAttribute="bottom" secondItem="ghg-8r-q3x" secondAttribute="bottom" constant="254" id="5z0-A5-guA"/>
                                     <constraint firstItem="RXx-36-QTo" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="6Um-Fa-RDX"/>
+                                    <constraint firstItem="3yV-cQ-dd0" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="139" id="9m1-Rz-xGV"/>
                                     <constraint firstAttribute="trailing" secondItem="DZY-oe-Pie" secondAttribute="trailing" constant="8" id="FTv-0N-JlM"/>
                                     <constraint firstItem="nnu-3c-CK6" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="Gju-Ao-YyM"/>
+                                    <constraint firstAttribute="bottom" secondItem="3yV-cQ-dd0" secondAttribute="bottom" constant="31" id="HGg-If-1um"/>
+                                    <constraint firstAttribute="trailing" secondItem="3yV-cQ-dd0" secondAttribute="trailing" constant="138" id="KJj-0e-dSR"/>
                                     <constraint firstAttribute="trailing" secondItem="TYB-MU-TsK" secondAttribute="trailing" constant="8" id="O7O-gX-Ibj"/>
                                     <constraint firstAttribute="trailing" secondItem="nnu-3c-CK6" secondAttribute="trailing" constant="8" id="RSu-8N-3YD"/>
-                                    <constraint firstAttribute="bottom" secondItem="3yV-cQ-dd0" secondAttribute="bottom" constant="18" id="YcG-8q-Ct3"/>
                                     <constraint firstItem="nnu-3c-CK6" firstAttribute="top" secondItem="ghg-8r-q3x" secondAttribute="bottom" constant="4" id="Z2E-uz-wnc"/>
                                     <constraint firstItem="8my-zK-49J" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="al8-E8-vgb"/>
                                     <constraint firstItem="DZY-oe-Pie" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="cl2-XH-l6O"/>
+                                    <constraint firstItem="3yV-cQ-dd0" firstAttribute="top" secondItem="RXx-36-QTo" secondAttribute="bottom" constant="28" id="ecn-Ag-9rj"/>
                                     <constraint firstAttribute="trailing" secondItem="YOI-3r-2E3" secondAttribute="trailing" constant="8" id="eds-a3-6WK"/>
                                     <constraint firstItem="ghg-8r-q3x" firstAttribute="top" secondItem="0KU-mH-4Aj" secondAttribute="top" constant="28" id="gSg-zn-geT"/>
                                     <constraint firstAttribute="trailing" secondItem="8my-zK-49J" secondAttribute="trailing" constant="8" id="goY-AO-6He"/>
                                     <constraint firstAttribute="trailing" secondItem="ghg-8r-q3x" secondAttribute="trailing" constant="12" id="hY5-hb-hsd"/>
                                     <constraint firstItem="8my-zK-49J" firstAttribute="top" secondItem="nnu-3c-CK6" secondAttribute="bottom" constant="-7" id="hnD-Sk-Gck"/>
                                     <constraint firstItem="RXx-36-QTo" firstAttribute="top" secondItem="YOI-3r-2E3" secondAttribute="bottom" id="hrb-fY-eJQ"/>
-                                    <constraint firstItem="3yV-cQ-dd0" firstAttribute="top" secondItem="RXx-36-QTo" secondAttribute="bottom" constant="13" id="jC9-eq-iQd"/>
                                     <constraint firstItem="YOI-3r-2E3" firstAttribute="top" secondItem="TYB-MU-TsK" secondAttribute="bottom" constant="-7" id="kc9-CS-Qcj"/>
                                     <constraint firstItem="TYB-MU-TsK" firstAttribute="top" secondItem="DZY-oe-Pie" secondAttribute="bottom" constant="7" id="m8x-xm-0XK"/>
                                     <constraint firstItem="5UZ-ni-JkA" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="10" id="nJw-rz-Wbr"/>
                                     <constraint firstAttribute="trailing" secondItem="RXx-36-QTo" secondAttribute="trailing" constant="8" id="oPm-hW-IgS"/>
                                     <constraint firstItem="YOI-3r-2E3" firstAttribute="leading" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="8" id="obu-Tf-aPS"/>
-                                    <constraint firstItem="3yV-cQ-dd0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0KU-mH-4Aj" secondAttribute="leading" constant="20" symbolic="YES" id="se0-KU-XMi"/>
                                     <constraint firstAttribute="trailing" secondItem="5UZ-ni-JkA" secondAttribute="trailing" constant="10" id="tRk-lO-yeg"/>
                                     <constraint firstItem="DZY-oe-Pie" firstAttribute="top" secondItem="8my-zK-49J" secondAttribute="bottom" id="tsV-Mw-rX2"/>
-                                    <constraint firstAttribute="height" constant="258" id="zDY-GY-hrX"/>
+                                    <constraint firstAttribute="height" constant="314" id="zDY-GY-hrX"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -642,7 +644,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hEt-4e-D9h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="654" y="98"/>
+            <point key="canvasLocation" x="653.62318840579712" y="97.826086956521749"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jha-bs-H6Q">
